			MediaTray
			Shows removable media
			by Dennis Tomas

0.0.2
~~~~~
Allow for menu items to be dragged as text/uri-list.
Support for dragging the mountpoint URI.
Improved should_have_window().
Added fallback item.
Copy/Move dropped files.
Hide "Force Quit" item in window menu.
Use gtk.MountOperation for user feedback.
Do not show emblem for volumes that cannot be mounted.
Fixed images in Mount/Unmount menu items.
Show mount status in emblem.
Don't use UUIDs as icon ID, as they sometimes do not exist. (reported by Abrolag)

0.0.1
~~~~~
Initial release.